<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
        >
            <TextView
                android:id="@+id/title"
                android:text="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_margin="22dp"
            />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:src="@drawable/bandera"
            />
            <Button
                android:id="@+id/btn_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ver más datos"
                android:layout_gravity="center"
                android:layout_margin="10dp"
            />

            <LinearLayout
                android:id="@+id/data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:visibility="gone"
            >
                <TextView
                    android:id="@+id/data_text"
                    android:text="@string/data_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                />
                <TextView
                    android:id="@+id/pbi"
                    android:text="@string/pbi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:layout_marginBottom="3dp"
                />
                <TextView
                    android:id="@+id/poblacion"
                    android:text="@string/poblacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:layout_marginBottom="12dp"
                />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="15dp"
                >
                    <TextView
                        android:id="@+id/content"
                        android:text="@string/fest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="22dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:layout_marginBottom="10dp"
                    />

                    <TextView
                        android:id="@+id/velitas"
                        android:text="@string/velitas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:layout_marginBottom="12dp"
                    />
                    <ImageView
                        android:layout_width="350dp"
                        android:layout_height="180dp"
                        android:src="@drawable/velitas"
                    />
                    <TextView
                        android:id="@+id/velitas_date"
                        android:text="@string/velitas_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:textAlignment="textStart"
                        android:layout_marginBottom="25dp"
                    />

                    <TextView
                        android:id="@+id/barranquilla"
                        android:text="@string/barranquilla"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:layout_marginBottom="12dp"
                        />
                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="180dp"
                        android:src="@drawable/barranquilla"
                        />
                    <TextView
                        android:id="@+id/barranquilla_date"
                        android:text="@string/barranquilla_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:textAlignment="textStart"
                        android:layout_marginBottom="25dp"
                    />

                    <TextView
                        android:id="@+id/flores"
                        android:text="@string/flores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:layout_marginBottom="12dp"
                        />
                    <ImageView
                        android:layout_width="310dp"
                        android:layout_height="180dp"
                        android:src="@drawable/flores"
                        />
                    <TextView
                        android:id="@+id/flores_date"
                        android:text="@string/flores_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:textAlignment="textStart"
                        android:layout_marginBottom="25dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="15dp"
                >
                    <TextView
                        android:id="@+id/food"
                        android:text="@string/food"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="22dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:layout_marginBottom="10dp"
                    />

                    <TextView
                        android:id="@+id/paisa"
                        android:text="@string/paisa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:layout_marginBottom="12dp"
                    />
                    <ImageView
                        android:layout_width="350dp"
                        android:layout_height="180dp"
                        android:src="@drawable/bandeja"
                    />

                    <TextView
                        android:id="@+id/sancocho"
                        android:text="@string/sanconcho"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:layout_marginBottom="12dp"
                    />
                    <ImageView
                        android:layout_width="350dp"
                        android:layout_height="180dp"
                        android:src="@drawable/sancocho"
                    />

                    <TextView
                        android:id="@+id/ajiaco"
                        android:text="@string/ajiaco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:layout_marginBottom="12dp"
                    />
                    <ImageView
                        android:layout_width="350dp"
                        android:layout_height="180dp"
                        android:src="@drawable/ajiaco"
                    />

                    <TextView
                        android:id="@+id/arepa"
                        android:text="@string/arepa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:layout_marginBottom="12dp"
                    />
                    <ImageView
                        android:layout_width="350dp"
                        android:layout_height="180dp"
                        android:src="@drawable/arepa"
                        android:layout_marginBottom="20dp"
                    />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>